<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="5dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgUrlIm"
                    android:layout_width="125dp"
                    android:layout_height="168dp"
                    android:contentDescription="@string/imagem_de_capa_do_filme" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/primary"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/watchedTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/watchedTile"
                        android:textColor="@color/primary"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/startsTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/startsTile"
                        android:textColor="@color/primary"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/generoTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/generoTile"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/primary"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>